--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Zarr = "0a941bbe-ad1d-11e8-39d9-ab76183a1d99"
+AWSCore" = "4f1ea46c-232b-54a6-9b17-cc2d0f3e6598"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
