--- a/Project.toml
+++ b/Project.toml
@@ -4,3 +4,7 @@ AWSCore = "4f1ea46c-232b-54a6-9b17-cc2d0f3e6598"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
+CFTime = "179af706-886a-5703-950a-314cd64e0468"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
